# synccli

./: LICENSE  Makefile  README.md  go.mod  go.sum
bindings/: lua_interface.go  python_interface.go  rust_ffi.go
cmd/synccli/: main.go  remote.go  sync.go
lua/: filter.lua  rules.lua
python/: __init__.py  scanner.py
remote/: config.go  ssh_client.go  sync_engine.go
rust/: Cargo.toml
rust/src/: compression.rs  crypto.rs  diff.rs  lib.rs
