[package]
name = "synccli-rust"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10"
flate2 = "1.0"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
libc = "0.2"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
tempfile = "3.0"
